  [Marco Pagani]
  * Fixed conditional spectrum with investigation time different from 1 year

  [Michele Simionato]
  * Internal: changed the conditional spectrum storage
  * Fixed documentation of the Extractor for hazard curves and maps
  * Fixed bug in `oq zip`: when starting from a directory different from the
    job.ini directory, .hdf5 files for nonparametric ruptures were not included
  * Honored `minimum_magnitude` for MultiFaultSources
  * Overhauled the experimental postprocessing framework and fixed many
    bugs in the `compute_mrd` postprocessor

  [Anirudh Rao]
  * Added a verification test suite for the Conditioned GMFs calculator

  [Michele Simionato]
  * Added output `rates_by_src`
  * Fixed method '/v1/ini_defaults' returning NaNs for the site parameters
  * Added output `mean_disagg_bysrc` for single site calculations with use_rates
  * Added command `oq reduce_smlt`
  * Fixed reinsurance calculations when there is a single loss type
  * Changed the source seed generation to not depend on the source ID suffix
  * Tracebacks were printed 3 times in the console: this is finally fixed
  * Forbidden duplicate sources in atomic groups
  * Forbidden duplicate mutually exclusive sources
  * Fixed conditional spectrum calculator with multiple sites and implemented
    parallelization
  * Fixed the source ID generation for CollapsedPointSources
  * Fixed the error message for wrong weights in the gsim logic tree file
  * Fixed KeyError in calculations using the EasternCan15Mid with PGA
  * Replaced hard-coded limit to 25 levels in the MRD postprocessor
    with a simple warning

  [Kendra Johnson]
  * Added a job parameter 'reqv_ignore_sources', which indicates which
    sources - specified as a list of thier source ids - should not be collapsed
    using the equivalent distance

  [Michele Simionato]
  * Extended (re)insurance calculations to manage insurance deductibles at asset
    level